feat: add start command to npm

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
+    "start": "webpack serve --mode development",
     "dev": "webpack serve --mode development"
   },
   "dependencies": {
