--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-router-dom": "^5.2.0",
     "style-loader": "^2.0.0",
     "webpack": "^5.5.1",
-    "webpack-cli": "^4.2.0"
+    "webpack-cli": "^4.2.0",
+    "webpack-dev-server": "^3.11.0"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.8.1",
@@ -28,7 +29,6 @@
     "eslint": "6.8.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-import-resolver-typescript": "^2.3.0",
-    "eslint-plugin-import": "^2.21.2",
-    "webpack-dev-server": "^3.11.0"
+    "eslint-plugin-import": "^2.21.2"
   }
 }
