--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "webpack serve --mode development",
+    "start": "webpack serve",
     "dev": "webpack serve --mode development"
   },
   "dependencies": {
